point3 fixed and modal style overflow fixed

--- a/src/reusable/components/Popup.module.scss
+++ b/src/reusable/components/Popup.module.scss
@@ -13,6 +13,4 @@
     outline: none !important;
     border-radius: 5px;
 
-    max-height: 100vh;
-    overflow: auto;    
 }
